	* apps/Makefile: Small change that reduces the number of shell invocations
	  by one (Mike Smith).
	* apps/examples/elf:  Test example for the ELF loader.
	* apps/examples/elf:  The ELF module test example appears fully functional.
	* apps/netutils/json:  Add a snapshot of the cJSON project.  Contributed by
	  Darcy Gong.
	* apps/examples/json:  Test example for cJSON from Darcy Gong
	* apps/nshlib/nsh_netinit.c: Fix static IP DNS problem (Darcy Gong)
	* apps/netutils/resolv/resolv.c: DNS fixes from Darcy Gong.
	* COPYING: Licensing information added.
	* apps/netutils/codec and include/netutils/urldecode.h, base64.h, and md5.h:
	  A port of the BASE46, MD5 and URL CODEC library from Darcy Gong.
	* nsnlib/nsh_codeccmd.c:  NSH commands to use the CODEC library.
	  Contributed by Darcy Gong.
	* apps/examples/wgetjson: Test example contributed by Darcy Gong
	* apps/examples/cxxtest:  A test for the uClibc++ library provided by
	  Qiang Yu and the RGMP team.
	* apps/netutils/webclient, apps/netutils.codes, and apps/examples/wgetjson:
	  Add support for wget POST interface.  Contributed by Darcy Gong.
	* apps/examples/relays:  A relay example contributed by Darcy Gong.
	* apps/nshlib/nsh_netcmds: Add ifup and ifdown commands (from Darcy
	  Gong).
	* apps/nshlib/nsh_netcmds: Extend the ifconfig command so that it
	  supports setting IP addresses, network masks, name server addresses,
	  and hardware address (from Darcy Gong).

6.24 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/ostest/roundrobin.c:  Replace large tables with
	  algorithmic prime number generation.  This allows the roundrobin
	  test to run on platforms with minimal SRAM (Freddie Chopin).
	* apps/nshlib/nsh_dbgcmds.c:  Add hexdump command to dump the contents
	  of a file (or character device) to the console  Contributed by Petteri
	  Aimonen.
	* apps/examples/modbus:  Fixes from Freddie Chopin
	* apps/examples/modbus/Kconfig: Kconfig logic for FreeModBus contributed
	  by Freddie Chopin.
